[gd_scene load_steps=11 format=3 uid="uid://dtyfw3eetyfc"]

[ext_resource type="Script" path="res://Interaction/Interactionarea/Interactionarea.gd" id="1_nw8rw"]
[ext_resource type="Texture2D" uid="uid://bmg7fvruvs8p4" path="res://MainHouse/Icons/Main Ship - Base - Full health.png" id="2_iappx"]
[ext_resource type="Script" path="res://MainHouse/MainHouseUI.gd" id="3_rygoj"]
[ext_resource type="FontFile" uid="uid://dkg32o3qfh2n7" path="res://Assets/Fonts/pixelmix.ttf" id="5_idt1l"]
[ext_resource type="Texture2D" uid="uid://blne18cnroijs" path="res://Assets/Sprites/Upgrades/MeleUpgrade.webp" id="5_srhd0"]
[ext_resource type="Texture2D" uid="uid://dirbjqmfymk5s" path="res://Assets/Sprites/Upgrades/RangeUpgrade.webp" id="6_3a4rq"]
[ext_resource type="Texture2D" uid="uid://ccvn3iojf6dcb" path="res://Assets/Sprites/Upgrades/spaceShipUpgrade.webp" id="7_ah2wy"]
[ext_resource type="Texture2D" uid="uid://bq177r55jihio" path="res://Assets/Sprites/Upgrades/TurretUpgrade.webp" id="8_hoym4"]
[ext_resource type="Texture2D" uid="uid://bw8448uc7cw2p" path="res://Assets/Sprites/shipUiBackground.webp" id="9_tfv6a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k8nvd"]
size = Vector2(103, 82)

[node name="InteractionArea" type="Area2D"]
collision_layer = 0
script = ExtResource("1_nw8rw")
action_name = "Interact"
type = "MainHouse"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_k8nvd")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(7.62939e-06, 0)
scale = Vector2(3.20833, 2.85417)
texture = ExtResource("2_iappx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.478
anchor_right = 0.5
anchor_bottom = 0.478
offset_left = -344.0
offset_top = -175.744
offset_right = 364.0
offset_bottom = 196.256
script = ExtResource("3_rygoj")
metadata/_edit_use_anchors_ = true

[node name="upgradeMeleButton" type="Button" parent="CanvasLayer/Control"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 216.0
offset_top = -141.0
offset_right = 314.0
offset_bottom = -49.0
theme_override_fonts/font = ExtResource("5_idt1l")
action_mode = 0
icon = ExtResource("5_srhd0")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="CanvasLayer/Control/upgradeMeleButton"]
layout_mode = 0
offset_left = 21.0
offset_top = -26.0
offset_right = 83.0
offset_bottom = -3.0
theme_override_fonts/font = ExtResource("5_idt1l")
text = "Sword"

[node name="Cost" type="Label" parent="CanvasLayer/Control/upgradeMeleButton"]
layout_mode = 0
offset_left = 28.0
offset_top = 94.0
offset_right = 75.0
offset_bottom = 117.0
theme_override_colors/font_color = Color(0.762676, 0.655324, 0.283658, 1)
theme_override_fonts/font = ExtResource("5_idt1l")
text = "1$"

[node name="upgradeRangeButton" type="Button" parent="CanvasLayer/Control"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.0
offset_top = -141.0
offset_right = -210.0
offset_bottom = -49.0
theme_override_fonts/font = ExtResource("5_idt1l")
action_mode = 0
icon = ExtResource("6_3a4rq")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="CanvasLayer/Control/upgradeRangeButton"]
layout_mode = 0
offset_left = 29.0
offset_top = -27.0
offset_right = 72.0
offset_bottom = -4.0
theme_override_fonts/font = ExtResource("5_idt1l")
text = "Gun
"

[node name="Cost" type="Label" parent="CanvasLayer/Control/upgradeRangeButton"]
layout_mode = 0
offset_left = 31.0
offset_top = 96.0
offset_right = 71.0
offset_bottom = 119.0
theme_override_colors/font_color = Color(0.762676, 0.655324, 0.283658, 1)
theme_override_fonts/font = ExtResource("5_idt1l")
text = "1 $"

[node name="upgradeBaseButton" type="Button" parent="CanvasLayer/Control"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 216.0
offset_top = 41.0
offset_right = 314.0
offset_bottom = 133.0
theme_override_fonts/font = ExtResource("5_idt1l")
action_mode = 0
icon = ExtResource("7_ah2wy")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="CanvasLayer/Control/upgradeBaseButton"]
layout_mode = 0
offset_left = 28.0
offset_top = -27.0
offset_right = 83.0
offset_bottom = -4.0
theme_override_fonts/font = ExtResource("5_idt1l")
text = "Base"

[node name="Cost" type="Label" parent="CanvasLayer/Control/upgradeBaseButton"]
layout_mode = 0
offset_left = 30.0
offset_top = 94.0
offset_right = 83.0
offset_bottom = 117.0
theme_override_colors/font_color = Color(0.762676, 0.655324, 0.283658, 1)
theme_override_fonts/font = ExtResource("5_idt1l")
text = "1 $"

[node name="upgradeTurretButton" type="Button" parent="CanvasLayer/Control"]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = 41.0
offset_right = -214.0
offset_bottom = 133.0
theme_override_fonts/font = ExtResource("5_idt1l")
action_mode = 0
icon = ExtResource("8_hoym4")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="CanvasLayer/Control/upgradeTurretButton"]
layout_mode = 0
offset_left = 9.0
offset_top = -25.0
offset_right = 98.0
offset_bottom = -2.0
theme_override_fonts/font = ExtResource("5_idt1l")
text = "Turrets
"

[node name="Cost" type="Label" parent="CanvasLayer/Control/upgradeTurretButton"]
layout_mode = 0
offset_left = 30.0
offset_top = 94.0
offset_right = 83.0
offset_bottom = 117.0
theme_override_colors/font_color = Color(0.762676, 0.655324, 0.283658, 1)
theme_override_fonts/font = ExtResource("5_idt1l")
text = "1 $"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control"]
modulate = Color(1, 1, 1, 0.717647)
position = Vector2(346.5, 188)
scale = Vector2(0.375558, 0.355469)
texture = ExtResource("9_tfv6a")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="gui_input" from="CanvasLayer/Control" to="." method="_on_control_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/Control" to="CanvasLayer/Control" method="_on_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/upgradeMeleButton" to="CanvasLayer/Control" method="_on_upgrade_mele_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/upgradeRangeButton" to="CanvasLayer/Control" method="_on_upgrade_range_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/upgradeBaseButton" to="CanvasLayer/Control" method="_on_upgrade_base_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/upgradeTurretButton" to="CanvasLayer/Control" method="_on_upgrade_turret_button_pressed"]
